# science_utils

./: .gitignore  README.md  pyproject.toml
src/science_utils/colors/: catppuccin.py
src/science_utils/postprocess/: process_json.py
src/science_utils/utils/: conversions.py  timeseries.py
src/science_utils/visualize/: csv_timeseries.py  plot_csv.py
