[project]
name = "science_utils"
version = "0.1.0"
description = "Science utils for post-processing and plotting."
authors = [
    {name = "Max Spahn", email = "max.spahn@de.abb.com"},
]
dependencies = ["catppuccin>=2.3.4", "matplotlib>=3.10.0", "scipy>=1.15.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
process_json = "science_utils.postprocess.process_json:main"
process_csv_series = "science_utils.visualize.csv_timeseries:main"
plot_csv = "science_utils.visualize.plot_csv:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

